--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <section>
         <h1 class="text-8xl">The Magical & Mysterious<br>8 Ball</h1>
         <div id="input">
-            <p class="text-2xl">Ask your question of the mysterious eight ball.  You may ask ANYTHING, but beware, lest you be led astray while seeking knowledge concerning your fate....</p>
+            <p class="text-2xl">Ask your question of the mysterious eight ball.  You may ask ANYTHING that is a <span>yes or no question</span>, but BEWARE, lest you be led astray while seeking knowledge concerning your own fate....</p>
             <form>
                 <input type="text" placeholder="Type your question here" id="textInput">
                 <br>
-                <button type="button" onclick="spinBall()">Ask Now</button>
+                <button type="button" onclick="spinBall()">Shake the Ball</button>
             </form>
         </div>
         <div id="answers"></div>
